--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     font-family: var(--normal-heading);
-    background-image: linear-gradient(to right top, #ff8a3c, #f29f32, #e1b332, #cdc43f, #b8d456, #97db70, #74e18d, #4ce4ac, #00decb, #00d5e2, #2dcaee, #66bded);
+    background-image: linear-gradient(93.12deg, #581B98 0.52%, #9C1DE7 100%);
 }
 
 .admin-login-form-div {
