--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -4,7 +4,12 @@
     justify-content: center;
     align-items: center;
     font-family: var(--normal-heading);
-    background-image: linear-gradient(93.12deg, #581B98 0.52%, #9C1DE7 100%);
+    background-image: linear-gradient(93.12deg, #2f0f52 0.52%, #b94df7 100%);
+}
+
+.mini-icon{
+    height: 150px;
+    width: 150px;
 }
 
 .admin-login-form-div {
@@ -12,7 +17,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 460px;
+    height: 560px;
     width: 460px;
     background-color: white !important;
     border-radius: 8px;
